frontend-react/src/pages/Hero/Hero.scss
.app-hero {
  background-color: var(--black-color);
  flex-wrap: wrap;
  min-height: 100vh;
  flex: 1;
  width: 100%;
  height: 100%;
  flex-direction: row;

  padding: 6rem 2rem 0rem;

  @media screen and (min-width: 2000px) {
    padding-top: 8rem;
  }

  @media screen and (max-width: 500px) {
    flex-direction: column;
  }

  @media screen and (max-width: 450px) {
    padding: 6rem 1rem 2rem;
  }
}

.app-hero-info {
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  height: 100%;

  margin: 0 2rem;

  @media screen and (max-width: 1200px) {
    width: 100%;
    margin-right: 0rem;
  }
}

.big-text {
  font-size: 1.3rem;
}

.text-margin {
  margin-bottom: 10%;
}

.app-hero-text {
  height: 100%;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;

  @media screen and (max-width: 1200px) {
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
  }
}

.app-hero-paint {
  flex: 0.75;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: flex-start;
  height: 100%;
  margin-left: 1rem;

  div {
    width: 100px;
    height: 100px;
  }

  p {
    position: relative;
    top: -10%;
    left: -5%;
    color: var(--black-color);
    cursor: pointer;
    font-weight: 500;
  }

  p:hover {
    color: var(--white-color);
  }

  // links alt height/width

  div:nth-child(1) {
    width: 125px;
    height: 125px;
    background: url('../../assets/paint_cyan.png');
    background-size: cover;
    transform: rotate(-30deg);
    border-radius: 25%;
  }

  div:nth-child(2) {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 1.75rem;
    width: 175px;
    height: 175px;
    background: url('../../assets/paint_yellow.png');
    background-size: cover;
  }

  div:nth-child(3) {
    width: 100px;
    height: 100px;
    background: url('../../assets/paint_red.png');
    background-size: cover;
    transform: rotate(30deg);
    border-radius: 25%;
  }

  @media screen and (min-width: 2000px) {
    div:nth-child(2) {
      width: 400px;
      height: 400px;
    }

    div:nth-child(3) {
      width: 170px;
      height: 170px;
    }

    div:nth-child(1) {
      width: 200px;
      height: 200px;
    }
  }
}

.app-hero-img {
  flex: 1;
  height: 100%;
  display: flex;
  justify-content: flex-end;
  align-items: flex-end;
  position: relative;

  img {
    width: 100%;
    object-fit: contain;
    z-index: 1;
  }

  @media screen and (max-width: 1200px) {
    margin: 2rem 2rem;
  }
}

